<resources>
    <string name="app_name">TohidStar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TohidStar</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alphabet">qwertyuiopasdfghjklzxcvbn m</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="setting">setting</string>
    <string name="forman">forman</string>
    <string name="worker">worker</string>
    <string name="management">Management</string>
    <string name="Foreman">Foreman</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="personal_code">Personal Code</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string-array name="occupation">
        <item>Foreman</item>
        <item>Worker</item>
        <item>Manager</item>
    </string-array>
</resources>
